# capstone2025-ChengXue

./: .env.example  .gitignore  AnswerConfig.ts  README.md  app.py  app_hybrid.py  conversation_flow.py  crawl4ai_domain_crawler.py  crawl4ai_sitemap_crawler.py  debug_ragas.py  domestic_violence_chatgpt.docx  env.example  hybrid_chatbot.py  intelligent_conversation_manager.py  llm_crisis_detector.py  main.py  pyproject.toml  rag_pipeline.py  rag_simple.py  rag_validation.py  rag_validation_results_20250814_124133.json  requirements.txt  setup_openai.py  survivor_story_processor.py  trauma_informed_delivery.py
Knowledge Base/Domestic Abuse Stories/: Anna's Story of Domestic Violence • NCDV.html  Becky’s Story • Domestic Abuse Stories.html  Elena’s Story • Domestic Abuse Stories.html  John's Story • Domestic Abuse Stories.html  (+4 more)
MSc AI-DA-AI Online Thesis Template (LaTeX)_2025/: Thesis_template.aux  Thesis_template.bbl  Thesis_template.blg  Thesis_template.brf  Thesis_template.lof  Thesis_template.tex  Thesis_template.toc
Timeline-main/: .editorconfig  .eslintrc.json  .gitignore  .prettierrc.js  App.tsx  app.json  babel.config.js  index.js  jsconfig.json  package-lock.json  package.json  readMe.md  tsconfig.json
cited resources/: new.txt  old text.txt  old.txt
meeting audio/: 250609_121939_00.json  250609_121939_00.srt  250609_121939_00.tsv  250609_121939_00.txt  250609_121939_00.vtt
templates/: 404.html  500.html  index.html  privacy.html  safety.html
website map/: crawl4ai_custom_context(2).md  sitemap(1).xml  sitemap-tusla.xml  sitemap.xml  wiki_extract.ipynb
(+491 files in other folders)
