[project]
name = "capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=5.7.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.1.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "markupsafe>=2.1.0",
]
